--- a/backend/Devians-backend/package.json
+++ b/backend/Devians-backend/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2"
+    "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
